--- a/style.css
+++ b/style.css
@@ -472,7 +472,7 @@ ul div span a:hover {
   position: absolute;
   height: 4px;
   width: 20%;
-  background: #22b4b7;
+  background: #13d14c;
 }
 .longfazers span:nth-child(1) {
   top: 20%;
