--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ html {
   border-radius: 6px;
   border: 2px solid #13d14c;
   transition: all 0.3s ease;
+  font-family: 'Press Start 2P', cursive;
 }
 .this-is-pain:hover {
   background: none;
