--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ html {
   padding: 15px 0;
   background: #13d14c;
 }
+body{
+  background-color: black;
+  font-family: 'Press Start 2P', cursive;
+}
 .navbar .max-width {
   display: flex;
   align-items: center;
